components/sections/home-page/bottom-section/styles/knowTheProjectStatus.module.scss
@import "../../../../layouts/styles/PageLayout.module.scss";
@import "../../../../../styles/theme/Default.module.scss";
@import "../../../../../styles/theme/Utils.module.scss";

.knowTheProjectStatus {
  @extend %pagePaddingX;
  padding-top: 5rem;
  padding-bottom: 5rem;

  &_bg {
    background: linear-gradient(270deg, transparent, #00294e, transparent);
  }

  &_content {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 3rem;
    @include isSmallerRange {
      display: flex;
      flex-direction: column;
    }
  }

  &_projectCardWrapper {
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative;

    @include isSmallerRange {
      margin-bottom: 5rem;
    }
  }

  &_tagsWrapper {
    display: flex;
    flex-wrap: wrap;
    gap: 1rem;
  }

  &_experience {
    width: 100%;
    display: flex;
    row-gap: 1.5rem;
    flex-direction: column;
  }

  &_image {
    object-fit: cover;
    border-radius: 0.5rem;
    overflow: hidden;
  }

  &_title {
    color: white;
    font-size: var(--title-size);
    font-weight: var(--title-weight);
    padding-bottom: 1rem;
  }

  &_text {
    color: white;
  }

  &_rightSection {
    position: relative;
  }
}

